--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://ns.giit.us/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
+<li><a href="http://ns.wedid.us/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
 <li><a href="http://right.ml/" target="_blank">精品福利</a></li>
 <li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
@@ -74,7 +74,7 @@
 <li><a href="http://wk.hizhan123.com/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="https://www.tvboxnow.com/index.php" target="_blank">公仔箱論壇</a></li>
 <li><a href="http://173.192.147.20/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
-<li><a href="http://365xav.tk/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
+<li><a href="http://365xav.tk/thread-173029-1-1.html?x=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aix159.com/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayayy.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://super.taoy9.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
@@ -119,7 +119,7 @@
 <li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
-<li><a href="http://www.ttlang.xyz/?fromuid=3952405" target="_blank">桃太狼</a></li>
+<li><a href="http://www.ttlbbs.info/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.yixingjia.org/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
@@ -131,11 +131,11 @@
 <li><a href="http://bbbq.org/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzav.com/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.xoas.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
-<li><a href="http://cl.clep.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
+<li><a href="http://cl.wlaf.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
 <li><a href="http://cl.ziaw.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
 <li><a href="http://cl.yc0e.net/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
 <li><a href="http://youkezjz.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
-<li><a href="http://cl.wrou.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
+<li><a href="http://cl.chie.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -205,17 +205,11 @@
 <li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
 <li><a href="http://r1g2n3cs.space/" target="_blank">初水视频</a></li>
-<li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
-<li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
-<li><a href="http://email.lvchadizhi.at.gmail.com.gre7.space/" target="_blank">绿茶视频</a></li>
-<li><a href="http://hxplayer.com/" target="_blank">红杏视频</a></li>
-<li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
-<li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
 <li><a href="http://www.avtianmao.org/" target="_blank">AV天猫</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
-<li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.1294.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
@@ -226,17 +220,24 @@
 <li><a href="http://www.8688av.com/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
 <li><a href="http://www.aicaosp.com/" target="_blank">爱操视频</a></li>
-<li><a href="http://592sesexia.info/" target="_blank">超快色色下</a></li>
-<li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
-<li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
-<li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
-<li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
-<li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
+<li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
+<li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
+<li><a href="http://email.lvchadizhi.at.gmail.com.gre7.space/" target="_blank">绿茶视频</a></li>
+<li><a href="http://hxplayer.com/" target="_blank">红杏视频</a></li>
+<li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
+<li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://email.qisededizhi.at.gmail.com.qs7.space/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
 <li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
+<li><a href="http://592sesexia.info/" target="_blank">超快色色下</a></li>
+<li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
+<li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
+<li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
+<li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
+<li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
+<li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.fuliai.top/" target="_blank">福利爱</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
@@ -276,7 +277,9 @@
 <li><a href="http://www.dbj1111.com/" target="_blank">大宝剑</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
+<li><a href="http://www.zhaiy.com/" target="_blank">宅艺</a></li>
 <li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
+<li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.twav14.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
@@ -391,6 +394,7 @@
 <li><a href="http://leechporn.com/" target="_blank">Leechporn</a></li>
 <li><a href="http://javthai.me/" target="_blank">JavThai</a></li>
 <li><a href="http://javcl.com/" target="_blank">JAVCL</a></li>
+<li><a href="http://jk11.co/" target="_blank">JK World</a></li>
 <li><a href="https://avuncensor.com/" target="_blank">AV uncensor</a></li>
 <li><a href="http://hdhardporn.com/" target="_blank">HDHardPorn</a></li>
 <li><a href="http://adultdouga-db.com/" target="_blank">無料AV アダルト</a></li>
@@ -514,7 +518,7 @@
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://trg0.info/?fromuid=248908" target="_blank">唐人阁</a></li>
 <li><a href="http://www.22a.tv/" target="_blank">恋恋影视</a></li>
-<li><a href="https://chaturbate.com/" target="_blank">Chaturbate</a></li>
+<li><a href="http://chaturbate.us/" target="_blank">Online Cam</a></li>
 <li><a href="https://cams.com/" target="_blank">Cams</a></li>
 <li><a href="http://www.cam2fun.com/" target="_blank">Cam2Fun</a></li>
 <li><a href="https://www.cam4.com/" target="_blank">CAM4</a></li>
