--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
 <li><a href="http://ns.wedid.us/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
 <li><a href="http://right.ml/" target="_blank">精品福利</a></li>
 <li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
-<li><a href="http://fl47.net/?fromuid=5495" target="_blank">福利社区</a></li>
+<li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
 <li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77218.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.160/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://xinghao.world/?fromuid=18" target="_blank">性好论坛</a></li>
 <li><a href="http://xisezi.xyz/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
@@ -117,7 +116,7 @@
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs7.com/?fromuid=685495" target="_blank">99re论坛</a></li>
 <li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
-<li><a href="http://198.15.119.146/forum.php?fromuid=3234239" target="_blank">比思论坛</a></li>
+<li><a href="http://174.138.175.178/" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlbbs.info/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
@@ -131,11 +130,9 @@
 <li><a href="http://bbbq.org/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzav.com/?fromuid=70941" target="_blank">桃花族</a></li>
 <li><a href="http://cl.xoas.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
-<li><a href="http://cl.wlaf.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区3</a></li>
-<li><a href="http://cl.ziaw.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区4</a></li>
-<li><a href="http://cl.yc0e.net/index.php?u=292664&ext=d7b31" target="_blank">草榴社区5</a></li>
-<li><a href="http://youkezjz.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区6</a></li>
-<li><a href="http://cl.chie.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区7</a></li>
+<li><a href="http://yyxing8.com/1096417" target="_blank">性吧春暖花开2</a></li>
+<li><a href="http://174.127.195.190/bbs/index.php" target="_blank">色中色2</a></li>
+<li><a href="http://104.194.212.17/forum/?fromuid=11991220" target="_blank">第一会所2</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -180,8 +177,7 @@
 <li><a href="http://www.ifulisao.info/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
-<li><a href="http://www.fulisuo2.com/" target="_blank">福利所</a></li>
-<li><a href="http://www.baidu8.website/" target="_blank">苍井空导航</a></li>
+<li><a href="http://www.fulisuo666.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.qq7.pw/" target="_blank">亲亲去网址导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
                     </ul>
@@ -209,6 +205,7 @@
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
 <li><a href="http://www.avtianmao.org/" target="_blank">AV天猫</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
+<li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.1294.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -240,7 +237,6 @@
 <li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.fuliai.top/" target="_blank">福利爱</a></li>
 <li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
-<li><a href="http://www.xxoo44.com/" target="_blank">JJAIBB</a></li>
 <li><a href="http://www.weight81.com/" target="_blank">夜夜撸</a></li>
 <li><a href="http://www.cao0002.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
@@ -254,7 +250,7 @@
 <li><a href="http://www.selangjidi.com/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xss1.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.hongfange888.net/" target="_blank">红番阁</a></li>
-<li><a href="http://www.100zw.cc/" target="_blank">东京热</a></li>
+<li><a href="http://www.lulupron.net/" target="_blank">东京热</a></li>
 <li><a href="http://99kk5.com/" target="_blank">久久热</a></li>
 <li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
 <li><a href="http://www.aotu17.com/" target="_blank">凹凸视频</a></li>
@@ -272,6 +268,7 @@
 <li><a href="http://play9118.com/" target="_blank">PLAY视频</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
+<li><a href="http://www.singlove.com/" target="_blank">whichAV</a></li>
 <li><a href="http://guoganbaijiale.org/" target="_blank">果敢百家乐</a></li>
 <li><a href="http://xunyugong.org/" target="_blank">寻欲宫</a></li>
 <li><a href="http://www.dbj1111.com/" target="_blank">大宝剑</a></li>
@@ -281,6 +278,7 @@
 <li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
+<li><a href="http://www.nekoxxx.com/" target="_blank">免費線上看</a></li>
 <li><a href="http://www.twav14.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
 <li><a href="http://www.pomiav.com/" target="_blank">爆米花免費AV</a></li>
@@ -428,7 +426,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
-<li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.ivnext.online/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://23.231.192.82/?fromuid=34160" target="_blank">wc俱乐部</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
@@ -721,7 +719,7 @@
 <li><a href="https://www.nvshens.com/" target="_blank">宅男女神</a></li>
 <li><a href="http://www.2017guomo.co/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.guomo.red/" target="_blank">國模網</a></li>
-<li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
+<li><a href="http://www.timliao.com/bbs/forumdisplay.php?fid=18" target="_blank">提姆正妹版</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
 <li><a href="http://www.eastbabes.com/" target="_blank">EastBabes</a></li>
 <li><a href="http://www.jppornpic.com/" target="_blank">jppornpic</a></li>
