--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="http://ns.wedid.us/index.php?u=292664&ext=d7b31" target="_blank">草榴社区</a></li>
+<li><a href="https://ns.postcc.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://right.ml/" target="_blank">精品福利</a></li>
 <li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
@@ -58,17 +58,17 @@
 <li><a href="http://x77218.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
-<li><a href="http://38.103.161.160/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
+<li><a href="http://38.103.161.158/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://xisezi.xyz/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://204.44.109.3/index.htm" target="_blank">草原狼论坛</a></li>
-<li><a href="http://wo234.xyz/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://mf99.info/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://lw78.cc/bbs/forum.php" target="_blank">老王社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
-<li><a href="http://www.sewangchao2.com/" target="_blank">夜色王朝</a></li>
+<li><a href="http://www.sewangchao5.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://wk.hizhan123.com/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="https://www.tvboxnow.com/index.php" target="_blank">公仔箱論壇</a></li>
@@ -120,19 +120,15 @@
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://www.ttlbbs.info/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
-<li><a href="http://www.yixingjia.org/?fromuid=416640" target="_blank">亿性家</a></li>
 <li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://hd2046.info/" target="_blank">AV 天空</a></li>
 <li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://dianying01.com/?fromuid=981" target="_blank">电影01社区</a></li>
+<li><a href="http://www.wochalei.com/" target="_blank">貳月紅論壇</a></li>
 <li><a href="http://bbbq.org/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzav.com/?fromuid=70941" target="_blank">桃花族</a></li>
-<li><a href="http://cl.xoas.pw/index.php?u=292664&ext=d7b31" target="_blank">草榴社区2</a></li>
-<li><a href="http://yyxing8.com/1096417" target="_blank">性吧春暖花开2</a></li>
-<li><a href="http://174.127.195.190/bbs/index.php" target="_blank">色中色2</a></li>
-<li><a href="http://104.194.212.17/forum/?fromuid=11991220" target="_blank">第一会所2</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -152,7 +148,6 @@
 <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
 <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
-<li><a href="http://www.ssfldh.com/" target="_blank">色色福利导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.haoavfl.com/" target="_blank">好AV导航</a></li>
 <li><a href="http://www.ssmmdh.com/" target="_blank">色妹妹导航</a></li>
@@ -189,13 +184,10 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.bxzx99.info/" target="_blank">百性在线</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.jisewang.com/" target="_blank">季色网</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
-<li><a href="http://www.thkav.info/" target="_blank">桃花开</a></li>
-<li><a href="http://www.wagaga.co/" target="_blank">哇嘎嘎</a></li>
 <li><a href="http://www.slzx2.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
@@ -203,11 +195,9 @@
 <li><a href="http://r1g2n3cs.space/" target="_blank">初水视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
-<li><a href="http://www.avtianmao.org/" target="_blank">AV天猫</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
-<li><a href="http://www.1294.pw/" target="_blank">久零爱上视频</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
@@ -232,11 +222,11 @@
 <li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
 <li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
 <li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
-<li><a href="http://www.d8gege.com/" target="_blank">d8gege</a></li>
 <li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
 <li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
+<li><a href="http://www.3399av.xyz/" target="_blank">夜狼视频</a></li>
+<li><a href="http://www.cztv.me/" target="_blank">橙子视频</a></li>
 <li><a href="http://www.fuliai.top/" target="_blank">福利爱</a></li>
-<li><a href="http://qq.sinaqqweibo.top/" target="_blank">撸一夜视频</a></li>
 <li><a href="http://www.weight81.com/" target="_blank">夜夜撸</a></li>
 <li><a href="http://www.cao0002.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
@@ -312,9 +302,9 @@
 		<strong><a name="/6/">国外视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://beemtube.com/" target="_blank">BeemTube</a></li>
+<li><a href="https://beemtube.com/" target="_blank">BeemTube</a></li>
 <li><a href="https://www.redtube.com/" target="_blank">Redtube</a></li>
-<li><a href="http://egbo.com/" target="_blank">EGBO</a></li>
+<li><a href="https://porngale.com/" target="_blank">Porn Gale</a></li>
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
@@ -327,8 +317,6 @@
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="http://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
 <li><a href="http://www.freehqpornmovies.com/" target="_blank">FreeHqPorn</a></li>
-<li><a href="http://www.freepornvideo.sex/" target="_blank">Free Porn</a></li>
-<li><a href="http://www.freshteenvideos.com/" target="_blank">FreshTeen</a></li>
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asianporn</a></li>
 <li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="https://tub99.com/" target="_blank">TUB99</a></li>
@@ -345,15 +333,15 @@
 <li><a href="http://pornorio.org/" target="_blank">Pornorio</a></li>
 <li><a href="http://pornfun.com/" target="_blank">PornFun</a></li>
 <li><a href="http://www.epornik.com/" target="_blank">ePornik</a></li>
+<li><a href="https://www.eporner.com/" target="_blank">EPORNER</a></li>
+<li><a href="http://pornyhd.com/" target="_blank">PornyHD</a></li>
 <li><a href="http://www.shesfreaky.com/" target="_blank">ShesFreaky</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOODAMA</a></li>
 <li><a href="http://www.hdmovz.com/" target="_blank">HDMOVZ</a></li>
 <li><a href="http://hqporner.com/" target="_blank">HQporner</a></li>
-<li><a href="http://www.sozrel.xxx/" target="_blank">Sozrel</a></li>
-<li><a href="http://www.porno23.com/" target="_blank">Porno23</a></li>
 <li><a href="http://lentaporno.com/" target="_blank">LentaPorno</a></li>
 <li><a href="http://www.poimel.org/" target="_blank">poimel</a></li>
-<li><a href="http://www.plashporn.com/" target="_blank">PlashPorn</a></li>
+<li><a href="https://porn-line.com/" target="_blank">Porn-Line</a></li>
 <li><a href="http://www.teenporntube.xxx/" target="_blank">TeenPornTube</a></li>
 <li><a href="http://dato.porn/" target="_blank">DatoPorn</a></li>
 <li><a href="https://www.vporn.com/" target="_blank">vPorn</a></li>
@@ -382,7 +370,7 @@
 <li><a href="http://www.timtube.com/" target="_blank">TimTube</a></li>
 <li><a href="https://www.pornrabbit.com/" target="_blank">PornRabbit</a></li>
 <li><a href="http://www.sexytube.me/" target="_blank">sexytube</a></li>
-<li><a href="http://www.huge6.com/" target="_blank">Huge6</a></li>
+<li><a href="https://www.huge6.com/" target="_blank">Huge6</a></li>
 <li><a href="http://www.hottube.me/" target="_blank">hottube</a></li>
 <li><a href="http://www.analdin.com/" target="_blank">Analdin</a></li>
 <li><a href="http://hpjav.com/" target="_blank">HPJav</a></li>
@@ -411,7 +399,6 @@
 <li><a href="http://jadult.net/" target="_blank">Jadult</a></li>
 <li><a href="http://javhd3x.com/" target="_blank">JAVHD3X</a></li>
 <li><a href="http://javroot.com/" target="_blank">JAVROOT</a></li>
-<li><a href="http://www.jmetube.com/" target="_blank">JMETube</a></li>
 <li><a href="http://www.tokyoporn.com/" target="_blank">TokyoPorn</a></li>
 <li><a href="http://www.adult-sex-porn-tv.com/" target="_blank">Adult TV</a></li>
 				    </ul>
@@ -580,7 +567,6 @@
 <li><a href="http://www.bmdru.com/" target="_blank">顶好精品论坛</a></li>
 <li><a href="http://www.zhenhaobt.com/" target="_blank">真好论坛</a></li>
 <li><a href="http://bbs.ludake.com/" target="_blank">撸大客</a></li>
-<li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://bbs.asiatvro.com/?fromuid=482005" target="_blank">卫视烧友论坛</a></li>
 				    </ul>
 		</div>
@@ -711,9 +697,7 @@
 <li><a href="http://www.cinsee.com/bbs/?fromuid=164762" target="_blank">行色天下</a></li>
 <li><a href="http://www.9gty.net/forum.php" target="_blank">九个太阳</a></li>
 <li><a href="http://www.jsmrke.com/?fromuid=99648" target="_blank">江山美人社区</a></li>
-<li><a href="http://www.sexinart.net/" target="_blank">情涩艺术</a></li>
 <li><a href="http://www.eroti-cart.com/" target="_blank">Erotic Art</a></li>
-<li><a href="http://www.mm131.com/" target="_blank">MM131</a></li>
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="https://www.nvshens.com/" target="_blank">宅男女神</a></li>
