--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
 <li><a href="http://204.44.109.3/index.htm" target="_blank">草原狼论坛</a></li>
-<li><a href="http://mf99.info/" target="_blank">蜜蜂社区</a></li>
+<li><a href="http://mf68.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://lw78.cc/bbs/forum.php" target="_blank">老王社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
@@ -102,7 +102,7 @@
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://aaasss8.com/" target="_blank">SeDog</a></li>
 <li><a href="http://www.xb123.top/" target="_blank">花花世界</a></li>
-<li><a href="http://5555av.co/" target="_blank">千百撸</a></li>
+<li><a href="https://7777av.co/" target="_blank">千百撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.414zz.com/" target="_blank">台湾妹娱乐网</a></li>
@@ -110,15 +110,12 @@
 <li><a href="http://www.yezubuluo.com/?454135" target="_blank">椰族部落</a></li>
 <li><a href="http://qianyifa.net/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="https://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
-<li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
-<li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs7.com/?fromuid=685495" target="_blank">99re论坛</a></li>
 <li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://174.138.175.178/" target="_blank">比思论坛</a></li>
 <li><a href="http://bbx169.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
-<li><a href="http://www.ttlbbs.info/?fromuid=3952405" target="_blank">桃太狼</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
@@ -138,6 +135,7 @@
 		<strong><a name="/4/">导航网站</a></strong><strong style="padding:0 185px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">发送任意邮件到<font color="#7CFC00">6dizhi@gmail.com</font>，自动回复蓝色小导航最新地址</strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://fulidh.gq/" target="_blank">柠檬导航</a></li>
 <li><a href="http://5gndh.com/" target="_blank">五姑娘导航</a></li>
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
@@ -145,22 +143,20 @@
 <li><a href="http://www.xinfuli.cc/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
-<li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
-<li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.haoavfl.com/" target="_blank">好AV导航</a></li>
 <li><a href="http://www.ssmmdh.com/" target="_blank">色妹妹导航</a></li>
-<li><a href="http://www.dabodh.cc/" target="_blank">大波导航</a></li>
-<li><a href="http://yeyel.top/" target="_blank">夜夜流</a></li>
+<li><a href="http://yeyeliu.com/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
+<li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
+<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
+<li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
 <li><a href="http://www.bigfuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
-<li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
 <li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
 <li><a href="http://nima6.space/" target="_blank">尼玛导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
-<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://ailovedd.com/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
@@ -171,7 +167,6 @@
 <li><a href="http://www.yikufl.net/" target="_blank">一库福利导航</a></li>
 <li><a href="http://www.ifulisao.info/" target="_blank">福利嫂宅男导航</a></li>
 <li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
-<li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
 <li><a href="http://www.fulisuo666.com/" target="_blank">福利所</a></li>
 <li><a href="http://www.qq7.pw/" target="_blank">亲亲去网址导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
@@ -189,25 +184,23 @@
 <li><a href="http://www.jisewang.com/" target="_blank">季色网</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
-<li><a href="http://www.slzx2.com/" target="_blank">色郎在线</a></li>
 <li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="https://oxxvideo.com/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.apian40.com/" target="_blank">A片迷</a></li>
-<li><a href="http://r1g2n3cs.space/" target="_blank">初水视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
-<li><a href="http://sae801.xyz/" target="_blank">sae8</a></li>
+<li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
+<li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
+<li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
+<li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
-<li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
-<li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
-<li><a href="http://oo.jx.cn/" target="_blank">哦哦免费电影</a></li>
 <li><a href="http://www.xhg123.info/" target="_blank">寻欢阁</a></li>
 <li><a href="http://www.caobiao34.com/" target="_blank">我要操婊</a></li>
-<li><a href="http://www.8688av.com/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
 <li><a href="http://www.aicaosp.com/" target="_blank">爱操视频</a></li>
+<li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
 <li><a href="http://email.lvchadizhi.at.gmail.com.gre7.space/" target="_blank">绿茶视频</a></li>
@@ -215,20 +208,21 @@
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://email.qisededizhi.at.gmail.com.qs7.space/" target="_blank">奇色视频</a></li>
-<li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
+<li><a href="http://www.bs6.space/" target="_blank">本色视频</a></li>
 <li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
-<li><a href="http://592sesexia.info/" target="_blank">超快色色下</a></li>
 <li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
+<li><a href="http://oo.jx.cn/" target="_blank">哦哦免费电影</a></li>
+<li><a href="http://www.lulu900.com/" target="_blank">LULU900</a></li>
+<li><a href="http://email.selaos520.at.gmail.com.exf2b3cs.space/" target="_blank">初水视频</a></li>
 <li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
-<li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
 <li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
 <li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.3399av.xyz/" target="_blank">夜狼视频</a></li>
-<li><a href="http://www.cztv.me/" target="_blank">橙子视频</a></li>
+<li><a href="http://www.8888av.xyz/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.fuliai.top/" target="_blank">福利爱</a></li>
-<li><a href="http://www.weight81.com/" target="_blank">夜夜撸</a></li>
+<li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
 <li><a href="http://www.cao0002.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://av888av.com/" target="_blank">AV啪啪</a></li>
@@ -249,10 +243,9 @@
 <li><a href="http://www.se848.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.vod47.com/" target="_blank">VOD视频</a></li>
-<li><a href="https://www.354hh.com/" target="_blank">四虎影库</a></li>
+<li><a href="https://www.238hk.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.67kvkv.com/" target="_blank">95pao</a></li>
-<li><a href="https://88.caomee.com/" target="_blank">CaoPorn</a></li>
-<li><a href="http://www.helloavgirls.com/" target="_blank">HelloAVGirls</a></li>
+<li><a href="https://vid.caocee.com/" target="_blank">CaoPorn</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.damose.com/" target="_blank">IAVporn</a></li>
 <li><a href="http://jinniumovie.be/a/" target="_blank">FC2视频</a></li>
@@ -285,11 +278,10 @@
 <li><a href="https://avgle.com/" target="_blank">Avgle</a></li>
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
-<li><a href="http://www.tutu900.com/" target="_blank">有色HD视频</a></li>
 <li><a href="http://www.avku7.com/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.maotu.tv/" target="_blank">猫兔TV</a></li>
 <li><a href="http://fcw19.com/" target="_blank">废柴视频网</a></li>
-<li><a href="http://sifangpian.pw/" target="_blank">私房片</a></li>
+<li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
 <li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.gogo3333.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
@@ -478,7 +470,7 @@
 <li><a href="http://milftoon.xxcomics.net/" target="_blank">Milftoon</a></li>
 <li><a href="http://collection-3d.com/" target="_blank">collection-3d</a></li>
 <li><a href="http://www.studiofow.com/" target="_blank">studiofow</a></li>
-<li><a href="http://javtorrent.xyz/" target="_blank">JP Torrent</a></li>
+<li><a href="http://javtorrent.re/" target="_blank">JP Torrent</a></li>
 <li><a href="http://www.cartoontube.xxx/" target="_blank">CartoonTube</a></li>
 				    </ul>
 		</div>
@@ -503,7 +495,7 @@
 <li><a href="http://192.161.172.137/?u=465979" target="_blank">买春堂</a></li>
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://trg0.info/?fromuid=248908" target="_blank">唐人阁</a></li>
-<li><a href="http://www.22a.tv/" target="_blank">恋恋影视</a></li>
+<li><a href="http://v.23c.im/" target="_blank">恋恋影视</a></li>
 <li><a href="http://chaturbate.us/" target="_blank">Online Cam</a></li>
 <li><a href="https://cams.com/" target="_blank">Cams</a></li>
 <li><a href="http://www.cam2fun.com/" target="_blank">Cam2Fun</a></li>
@@ -538,12 +530,12 @@
 <li><a href="http://zfuli.pw/" target="_blank">找福利网</a></li>
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
-<li><a href="http://www.tanghenre.com/" target="_blank">汤很热</a></li>
 <li><a href="http://www.haofukua.com/" target="_blank">好浮夸</a></li>
 <li><a href="https://meirifuli.me/" target="_blank">每日福利</a></li>
 <li><a href="http://haodiao.org/" target="_blank">haodiao</a></li>
 <li><a href="http://www.jdlingyu.moe/" target="_blank">绝对领域</a></li>
 <li><a href="https://www.dakashangche.com/" target="_blank">司机会所</a></li>
+<li><a href="https://400757.net/" target="_blank">唯美家园</a></li>
 <li><a href="http://www.huainanhai.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://www.lqzj.net/" target="_blank">猎奇之家</a></li>
 <li><a href="http://www.bocaishequ.cn/?u=4509" target="_blank">菠菜社区</a></li>
@@ -582,7 +574,7 @@
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
 <li><a href="http://www.avavav1.com/" target="_blank">AV小四郎</a></li>
-<li><a href="http://150.95.130.82/" target="_blank">色狐狸</a></li>
+<li><a href="http://3q2w1e.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://jp.notreal.cn/" target="_blank">假啪网</a></li>
 <li><a href="http://www.fh8.in/" target="_blank">番号库</a></li>
 <li><a href="http://www.99fanhao.com/" target="_blank">99番号网</a></li>
@@ -772,14 +764,11 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
-<li><a href="http://www.abase.me/" target="_blank">ABase</a></li>
-<li><a href="http://www.torrentx.cc/" target="_blank">AV种子</a></li>
 <li><a href="http://btdigg.co/" target="_blank">BTDigg</a></li>
 <li><a href="http://torrentcrazy.to/" target="_blank">Torrent Crazy</a></li>
 <li><a href="https://www.torrentkitty.tv/search/" target="_blank">Torrentkitty</a></li>
 <li><a href="http://torrentsearchweb.co/" target="_blank">TorrentSearch</a></li>
 <li><a href="http://www.gamestorrents.com/" target="_blank">GamesTorrents</a></li>
-<li><a href="http://www.sumotorrent.sx/" target="_blank">SUMOTorrent</a></li>
 <li><a href="https://rarbg.to/torrents.php" target="_blank">Rarbg</a></li>
 <li><a href="http://www.trovaporno.com/" target="_blank">TrovaPorno</a></li>
 <li><a href="http://www.toorgle.com/" target="_blank">Toorgle</a></li>
@@ -798,7 +787,6 @@
 <li><a href="http://bt2.bt87.cc/" target="_blank">种子磁力搜索</a></li>
 <li><a href="http://btgongchang.org/" target="_blank">BT工厂</a></li>
 <li><a href="http://www.btavmo.org/" target="_blank">BTAVMO</a></li>
-<li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.cilisoba.net/" target="_blank">CiLiSoBa</a></li>
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
