--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 <li><a href="http://www.bxzx99.info/" target="_blank">百性在线</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.jisewang.com/" target="_blank">季色网</a></li>
+<li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
 <li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
@@ -228,6 +229,7 @@
 <li><a href="https://cn.ax98.ws/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.7mav.cc/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xss1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.67sz123.com/" target="_blank">67射站</a></li>
 <li><a href="http://www.hongfange888.net/" target="_blank">红番阁</a></li>
 <li><a href="http://www.lulupron.net/" target="_blank">东京热</a></li>
 <li><a href="http://99kk6.com/" target="_blank">久久热</a></li>
@@ -236,12 +238,15 @@
 <li><a href="http://www.qqxxcc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.se848.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
+<li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
 <li><a href="http://www.vod47.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.238hk.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.19kmkm.com/" target="_blank">56pao</a></li>
 <li><a href="https://vid.caocee.com/" target="_blank">CaoPorn</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.damose.com/" target="_blank">IAVporn</a></li>
+<li><a href="https://www.85porn.com/" target="_blank">85Porn</a></li>
+<li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
 <li><a href="http://www.singlove.com/" target="_blank">whichAV</a></li>
@@ -250,7 +255,6 @@
 <li><a href="http://fcw18.com/" target="_blank">废柴视频网</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
-<li><a href="http://www.zhaiy.com/" target="_blank">宅艺</a></li>
 <li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
@@ -265,13 +269,13 @@
 <li><a href="http://ourjav.com/" target="_blank">ourJAV</a></li>
 <li><a href="http://www.av539.com/" target="_blank">av539</a></li>
 <li><a href="http://www.letsjav.com/" target="_blank">Letsjav</a></li>
-<li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://myavsuper.com/" target="_blank">myAV SUPER</a></li>
 <li><a href="https://avgle.com/" target="_blank">Avgle</a></li>
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
 <li><a href="http://www.avku7.com/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.maotu.tv/" target="_blank">猫兔TV</a></li>
+<li><a href="http://www.dbj3333.com/" target="_blank">大宝剑</a></li>
 <li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
 <li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.gogo3333.com/" target="_blank">宅男频道</a></li>
