--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
+<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
+<li><a href="http://yptq9.space/" target="_blank">约炮偷情导航</a></li>
 <li><a href="http://www.xinfuli.cc/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -152,6 +154,7 @@
 <li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
 <li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
+<li><a href="http://www.nmdaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://bigefuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
 <li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
